--- a/index.html
+++ b/index.html
@@ -4,9 +4,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tea Cozy</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href='#Mission'>Mission</a>
+            <a href='#Featured'>Featured Tea</a>
+            <a href='#Locations'>Locations</a>
+        </nav>
+    </header>
+   <main>
+       <section id='Mission'>
+           <h2>Our Mission</h2>
+           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+       </section>
+       <section id='Featured'>
+           <h2>Tea of the Mount</h2>
+           <h4>What's Steeping at The Tea Cozy?</h4>
+           <section class='image_library'>
+               <figure>
+                   <img src='./resources/images/berryblitz.webp' alt='Berry Blitz'>
+                   <figcaption>Fall Berry Blitz Tea</figcaption>
+               </figure>
+               <figure>
+                   <img src='./resources/images/spicedrum.webp' alt='Spiced Rum Tea'>
+                   <figcaption>Spiced Rum Tea</figcaption>
+               </figure>
+               <figure>
+                   <img src='./resources/images/donut.webp' alt='Donuts'>
+                   <figcaption>Seasonal Donuts</figcaption>
+               </figure>
+               <figure>
+                   <img src='./resources/images/myrtle.webp' alt='Myrtle Ave Tea'>
+                   <figcaption>Myrtle Ave Tea</figcaption>
+               </figure>
+               <figure>
+                   <img src='./resources/images/bedford.webp' alt='Bedford Tea'>
+                   <figcaption>Bedford Bizarre Tea</figcaption>
+               </figure>
+           </section>
+       </section>
+       <section id='Locations'>
+           <h2>Locations</h2>
+           <section class='address'>
+               <h3>Downtown</h3>
+               <h4>384 West 4th St</h4>
+               <h4>Suite 108</h4>
+               <h4>Portland, Maine</h4>
+           </section>
+           <section class='address'>
+               <h3>East Bayside</h3>
+               <h4>3433 Phisherman's Avenue</h4>
+               <h4>(Northwest Corner)</h4>
+               <h4>Portland, Maine</h4>
+           </section>
+           <section class='address'>
+               <h3>Oakdale</h3>
+               <h4>515 Crescent Avenue</h4>
+               <h4>Second Floor</h4>
+               <h4>Portland, Maine</h4>
+           </section>
+       </section>
+   </main>
+   <footer>
+        <section class='contact'>
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy.com</h5>
+            <h5>917-555-8904</h5>
+        </section>
+        <section class='copywrite'>
+            <h5><small>copyright The Tea Cozy 2017</small></h5>
+        </section>
+   </footer>
 </body>
 </html>
