--- a/index.html
+++ b/index.html
@@ -5,21 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea Cozy</title>
+    <link href='./resources/style.css' type='text/css' rel='stylesheet'>
 </head>
 <body>
     <header>
-        <nav>
-            <a href='#Mission'>Mission</a>
-            <a href='#Featured'>Featured Tea</a>
-            <a href='#Locations'>Locations</a>
+        <figure>
+            <img src='./resources/images/logo.webp' alt='Tea Cozy logo'>
+        </figure>
+            <nav>
+            <ul>
+                <a href='#mission'><li>Mission</li></a>
+                <a href='#featured'><li>Featured Tea</li></a>
+                <a href='#locations'><li>Locations</li></a>
+            </ul>
+            
         </nav>
     </header>
-   <main>
-       <section id='Mission'>
-           <h2>Our Mission</h2>
-           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-       </section>
-       <section id='Featured'>
+    <main>
+        <section id='mission'>
+           <section class='mission-text'>
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+            </section>
+            </section>
+        <!--- <section id='featured'>
            <h2>Tea of the Mount</h2>
            <h4>What's Steeping at The Tea Cozy?</h4>
            <section class='image_library'>
@@ -44,8 +53,8 @@
                    <figcaption>Bedford Bizarre Tea</figcaption>
                </figure>
            </section>
-       </section>
-       <section id='Locations'>
+       </section> --->
+       <section id='locations'>
            <h2>Locations</h2>
            <section class='address'>
                <h3>Downtown</h3>
